	* Fix bug #11533 (old bug tracker): Documentation is incorrect for tx_srfeuserregister_tca::addTcaMarkers
	* Fix bug #13643 (old bug tracker): Unnecessary disclosure of username in filename (Thanks to Steffen Müller)
	* Follow-up to feature #34447: Add support for saltedpasswords and rsaauth

2012-03-26 Stanislas Rolland  <typo3@sjbr.ca>
	* Fix bug #33279: Evaluation of arrays returns always false
	* Follow-up to feature #34447: Add support for saltedpasswords and rsaauth
	* Add feature #34676: Add support for title attribute on input fields for TCA markers (Thanks to Carlos Meyer)
	* Fix bug #14699 (old bug tracker): Cannot remove "username" field in EDIT view
	* Fix bug #31012: Images lost on profile editing
	* Fix bug #27521: Deleting images in EDIT mode leads to broken references
	* Fix bug #5932 (old bug tracker): Update profile and delete image
	* Fix bug #14509 (old bug tracker): Deleting images still buggy
	* Fix bug #13882: Gender is not shown in backend

2012-03-25 Stanislas Rolland  <typo3@sjbr.ca>
	* Fix bug #32066: Security bug in admin confirmation
	* Fix bug #15081 (old bug tracker): Admin review email is not sent to the admin but to the user
	* Fix bug #15182 (old bug tracker): Very very big problem with administrative review

2012-03-24 Stanislas Rolland  <typo3@sjbr.ca>
	* Follow-up to bug #13349: Checkbox is set to "0" if not checked (Thanks to Oliver Hader)

2012-03-23 Stanislas Rolland  <typo3@sjbr.ca>
	* Add feature #34447: Add support for saltedpasswords and rsaauth
	* Fix bug #26708: Autologin does not work with rsa and saltedpasswords
	* Fix bug #34417: Does not work with srfeuserregister_t3secsaltedpw anymore
	* Fix bug #34792: Edit profile sets password to dummyPassword if useMd5Password is used
	* Fix bug #34453: "password repeat" field has the value ###FIELD_password_again###
	* Fix bug #31152: Can't eval password on edit
	* Fix bug #31140: Dummy password "Joh 3,16" is used in the registration